:heavy_plus_sign: Feat(docs): add tailwindcss configuration

--- a/packages/docs/src/pages/index.astro
+++ b/packages/docs/src/pages/index.astro
@@ -53,6 +53,8 @@ try {
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message
 			above.
 		</p>
+
+		<h1 class="text-3xl text-purple-600">Tailwindscss</h1>
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="https://docs.astro.build/"
