--- a/packages/docs/src/layouts/Layout.astro
+++ b/packages/docs/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="flex flex-col h-screen bg-slate-200 dark:bg-slate-900">
 		<slot />
 	</body>
 </html>
@@ -34,8 +34,6 @@ const { title } = Astro.props;
 	}
 	html {
 		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
 	}
 	code {
 		font-family:
