--- a/packages/docs/src/layouts/Prose.astro
+++ b/packages/docs/src/layouts/Prose.astro
@@ -1,7 +1,7 @@
 ---
 ---
 <div
-  class="prose max-w-full dark:prose-invert prose-a:text-blue-600 prose-p:text-justify prose-img:rounded-xl "
+  class="prose max-w-none dark:prose-invert prose-a:text-blue-600 prose-p:text-justify prose-img:rounded-xl "
   >
   <slot />
 </div>
